# Bonboneka

./: .bombundlefig  .gitignore  LICENSE  MANIFEST.in  README.md  install.bat  install.sh  pyproject.toml  setup.py  webUI.py
bomk/: __init__.py  build.py  cli.py  config.py  gitlink.py  icon.py  inject.py  lib.py  minify.py  pwa.py
bomk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
bonboneka.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
webUI/: index.html  script.js  style.css
